@@ -67,70 +67,6 @@ if (!is_array($settings)) {
 }
 unset($settings,$setting,$attributes);
 
-/* load plugins events */
-/*
-$events = include $sources['data'].'transport.events.php';
-if (!is_array($events)) {
-	$modx->log(modX::LOG_LEVEL_ERROR,'Could not package in events.');
-} else {
-	$attributes = array (
-		xPDOTransport::PRESERVE_KEYS => true,
-		xPDOTransport::UPDATE_OBJECT => BUILD_EVENT_UPDATE,
-	);
-	foreach ($events as $event) {
-		$vehicle = $builder->createVehicle($event,$attributes);
-		$builder->putVehicle($vehicle);
-	}
-	$modx->log(xPDO::LOG_LEVEL_INFO,'Packaged in '.count($events).' Plugins events.');
-}
-unset ($events, $event, $attributes);
-*/
-
-/* package in default access policy */
-/*
-$attributes = array (
-	xPDOTransport::PRESERVE_KEYS => false,
-	xPDOTransport::UNIQUE_KEY => array('name'),
-	xPDOTransport::UPDATE_OBJECT => BUILD_POLICY_UPDATE,
-);
-$policies = include $sources['data'].'transport.policies.php';
-if (!is_array($policies)) { $modx->log(modX::LOG_LEVEL_FATAL,'Adding policies failed.'); }
-foreach ($policies as $policy) {
-	$vehicle = $builder->createVehicle($policy,$attributes);
-	$builder->putVehicle($vehicle);
-}
-$modx->log(modX::LOG_LEVEL_INFO,'Packaged in '.count($policies).' Access Policies.'); flush();
-unset($policies,$policy,$attributes);
-*/
-
-/* package in default access policy templates */
-/*
-$templates = include dirname(__FILE__).'/data/transport.policytemplates.php';
-$attributes = array (
-	xPDOTransport::PRESERVE_KEYS => false,
-	xPDOTransport::UNIQUE_KEY => array('name'),
-	xPDOTransport::UPDATE_OBJECT => BUILD_POLICY_TEMPLATE_UPDATE,
-	xPDOTransport::RELATED_OBJECTS => true,
-	xPDOTransport::RELATED_OBJECT_ATTRIBUTES => array (
-		'Permissions' => array (
-			xPDOTransport::PRESERVE_KEYS => false,
-			xPDOTransport::UPDATE_OBJECT => BUILD_PERMISSION_UPDATE,
-			xPDOTransport::UNIQUE_KEY => array ('template','name'),
-		),
-	)
-);
-if (is_array($templates)) {
-	foreach ($templates as $template) {
-		$vehicle = $builder->createVehicle($template,$attributes);
-		$builder->putVehicle($vehicle);
-	}
-	$modx->log(modX::LOG_LEVEL_INFO,'Packaged in '.count($templates).' Access Policy Templates.'); flush();
-} else {
-	$modx->log(modX::LOG_LEVEL_ERROR,'Could not package in Access Policy Templates.');
-}
-unset ($templates,$template,$attributes);
-*/
-
 /* load menus */
 $menus = include $sources['data'].'transport.menu.php';
 $attributes = array (
@@ -252,6 +188,7 @@ $builder->setPackageAttributes(array(
 	'changelog' => file_get_contents($sources['docs'] . 'changelog.txt'),
 	'license' => file_get_contents($sources['docs'] . 'license.txt'),
 	'readme' => file_get_contents($sources['docs'] . 'readme.txt'),
+	'chunks' => $BUILD_CHUNKS,
 	'setup-options' => array(
 		'source' => $sources['build'].'setup.options.php',
 	),
